[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/slime.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/Audio/discord-notification.mp3" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5.75, 3.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5.75, 0.875 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6.75, 3 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "walk"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 7 )

[node name="TopCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCheck"]
position = Vector2( 0, -1.875 )
shape = SubResource( 8 )

[node name="SideCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideCheck"]
position = Vector2( 0, 3.5 )
shape = SubResource( 9 )

[node name="SoundBounce" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="TopCheck" to="." method="_on_TopCheck_body_entered"]
[connection signal="body_exited" from="TopCheck" to="." method="_on_TopCheck_body_exited"]
[connection signal="body_entered" from="SideCheck" to="." method="_on_SideCheck_body_entered"]
